# AED-PROJ1

./: CMakeLists.txt
src/: ClassAndUc.cpp  ClassandUc.h  Data.cpp  Data.h  Menu.cpp  Menu.h  Schedule.cpp  Schedule.h  Slot.cpp  Slot.h  Student.cpp  Student.h  main.cpp
